--- a/browser/modules/test/xpcshell/xpcshell.ini
+++ b/browser/modules/test/xpcshell/xpcshell.ini
@@ -4,5 +4,6 @@ tail =
 firefox-appdir = browser
 skip-if = toolkit == 'android' || toolkit == 'gonk'
 
+[test_PlacesProvider.js]
 [test_DirectoryLinksProvider.js]
 [test_NewTabURL.js]
